Fixed title alignment

--- a/assets/stylesheets/_tickets.scss
+++ b/assets/stylesheets/_tickets.scss
@@ -247,6 +247,7 @@
 		width: 26%;
 		padding: 1.5em;
 		left: 0;
+        padding-top: 2.7em;
 
 		p {
 			font-size: 1.3em;
